; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_prof.c_prof_fdump.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_prof.c_prof_fdump.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DUMP_FILENAME_BUFSIZE = common dso_local global i32 0, align 4
@config_prof = common dso_local global i32 0, align 4
@opt_prof_final = common dso_local global i32 0, align 4
@prof_booted = common dso_local global i32 0, align 4
@prof_dump_filename_mtx = common dso_local global i32 0, align 4
@VSEQ_INVALID = common dso_local global i32 0, align 4
@opt_prof_leak = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @prof_fdump to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prof_fdump() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = load i32, i32* @DUMP_FILENAME_BUFSIZE, align 4
  %6 = zext i32 %5 to i64
  %7 = call i8* @llvm.stacksave()
  store i8* %7, i8** %2, align 8
  %8 = alloca i8, i64 %6, align 16
  store i64 %6, i64* %3, align 8
  %9 = load i32, i32* @config_prof, align 4
  %10 = call i32 @cassert(i32 %9)
  %11 = load i32, i32* @opt_prof_final, align 4
  %12 = call i32 @assert(i32 %11)
  %13 = load i32, i32* @prof_booted, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %0
  store i32 1, i32* %4, align 4
  br label %42

16:                                               ; preds = %0
  %17 = call i32* (...) @tsd_fetch()
  store i32* %17, i32** %1, align 8
  %18 = load i32*, i32** %1, align 8
  %19 = call i64 @tsd_reentrancy_level_get(i32* %18)
  %20 = icmp eq i64 %19, 0
  %21 = zext i1 %20 to i32
  %22 = call i32 @assert(i32 %21)
  %23 = load i32*, i32** %1, align 8
  %24 = call i32 @tsd_tsdn(i32* %23)
  %25 = call i32 @prof_dump_prefix_is_empty(i32 %24)
  %26 = icmp ne i32 %25, 0
  %27 = xor i1 %26, true
  %28 = zext i1 %27 to i32
  %29 = call i32 @assert(i32 %28)
  %30 = load i32*, i32** %1, align 8
  %31 = call i32 @tsd_tsdn(i32* %30)
  %32 = call i32 @malloc_mutex_lock(i32 %31, i32* @prof_dump_filename_mtx)
  %33 = load i32*, i32** %1, align 8
  %34 = load i32, i32* @VSEQ_INVALID, align 4
  %35 = call i32 @prof_dump_filename(i32* %33, i8* %8, float 1.020000e+02, i32 %34)
  %36 = load i32*, i32** %1, align 8
  %37 = call i32 @tsd_tsdn(i32* %36)
  %38 = call i32 @malloc_mutex_unlock(i32 %37, i32* @prof_dump_filename_mtx)
  %39 = load i32*, i32** %1, align 8
  %40 = load i32, i32* @opt_prof_leak, align 4
  %41 = call i32 @prof_dump(i32* %39, i32 0, i8* %8, i32 %40)
  store i32 0, i32* %4, align 4
  br label %42

42:                                               ; preds = %16, %15
  %43 = load i8*, i8** %2, align 8
  call void @llvm.stackrestore(i8* %43)
  %44 = load i32, i32* %4, align 4
  switch i32 %44, label %46 [
    i32 0, label %45
    i32 1, label %45
  ]

45:                                               ; preds = %42, %42
  ret void

46:                                               ; preds = %42
  unreachable
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @cassert(i32) #2

declare dso_local i32 @assert(i32) #2

declare dso_local i32* @tsd_fetch(...) #2

declare dso_local i64 @tsd_reentrancy_level_get(i32*) #2

declare dso_local i32 @prof_dump_prefix_is_empty(i32) #2

declare dso_local i32 @tsd_tsdn(i32*) #2

declare dso_local i32 @malloc_mutex_lock(i32, i32*) #2

declare dso_local i32 @prof_dump_filename(i32*, i8*, float, i32) #2

declare dso_local i32 @malloc_mutex_unlock(i32, i32*) #2

declare dso_local i32 @prof_dump(i32*, i32, i8*, i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
